# Hotel-Booking-Project

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py  0002_initial.py
hotel_booking_project/: asgi.py  settings.py  urls.py  wsgi.py
hotels/: models.py  serializers.py
hotels/migrations/: 0001_initial.py  0002_alter_hotel_reviews.py
rooms/: models.py
rooms/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_is_verified_email_alter_user_email.py  0003_user_phone_number.py
